tests/compile_fail/as_mut/enum.stderr
error: `AsMut` cannot be derived for enums
 --> tests/compile_fail/as_mut/enum.rs:2:1
  |
2 | enum Foo {
  | ^^^^
